<resources>
    <string name="app_name">UEFA Score</string>
    <string name="fixtures">Trận đấu</string>
    <string name="standing">Bảng xếp hạng</string>
    <string name="top_scorers">BXH cầu thủ</string>
    <string name="favorites">Yêu thích</string>
    <string name="tittle_main">UEFA Champions league</string>
    <string name="search_team">Search team</string>
    <string name="shots_on_goal">Shots on Goal</string>
    <string name="yellow_card">Yellow Cards</string>
    <string name="red_cards">Red Cards</string>
    <string name="ball_possession">Ball Possession</string>
    <string name="corner_kicks">Corner Kicks</string>
    <string name="passes">Passes</string>
    <string name="live_matches">Live Matches</string>
    <string name="view_all">View all</string>
    <string name="live">Trực tiếp</string>
    <string name="history_matches">History Matches</string>
    <string name="title_rank">#</string>
    <string name="title_team">Đội bóng</string>
    <string name="title_played">P</string>
    <string name="title_win">W</string>
    <string name="title_draw">D</string>
    <string name="title_lose">L</string>
    <string name="title_goals">Go</string>
    <string name="title_points">PTS</string>
    <string name="title_player">Player</string>
    <string name="title_age">Tuổi</string>
    <string name="title_nationality">Quốc tịch</string>
    <string name="title_height">Chiều cao</string>
    <string name="title_weight">Cân nặng</string>
    <string name="title_city">City</string>
    <string name="title_country">Country</string>
    <string name="title_founded">Founded</string>
    <string name="failed_to_save">Failed to save</string>
    <string name="failed_to_fetch">Failed to fetch</string>
    <string name="failed_to_update">Failed to update</string>
    <string name="failed_to_delete">Failed to delete</string>
    <string name="back_again_to_exit">Back again to exit </string>
    <string name="upcoming">Upcoming</string>
    <string name="news">Tin tức</string>
    <string name="live_en">Live</string>
    <string name="schedule">Lịch %s</string>
    <string name="info_match_detail">Chi tiết trận đấu</string>
    <string name="content_update_later">Nội dung sẽ được cập nhật sau</string>
</resources>
