<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.928" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewTitleGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="@dimen/sp_14"
        app:fontFamily="@font/sf_compact_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="224:11"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0316" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.19" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="@dimen/dp_10"
        app:cardElevation="0dp"
        app:layout_constraintDimensionRatio="351:181"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/guidelineTop">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/dp_5"
                android:orientation="horizontal"
                app:layout_constraintDimensionRatio="351:16"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewRank"
                    style="@style/TextViewHeaderStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.085"
                    android:gravity="center"
                    android:text="@string/title_rank" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewTeam"
                    style="@style/TextViewHeaderStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.381"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/title_team" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewPlayed"
                    style="@style/TextViewHeaderStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.085"
                    android:gravity="center"
                    android:text="@string/title_played" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewWin"
                    style="@style/TextViewHeaderStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.085"
                    android:gravity="center"
                    android:text="@string/title_win" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewDraw"
                    style="@style/TextViewHeaderStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.085"
                    android:gravity="center"
                    android:text="@string/title_draw" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewLose"
                    style="@style/TextViewHeaderStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.085"
                    android:gravity="center"
                    android:text="@string/title_lose" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewGoals"
                    style="@style/TextViewHeaderStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.116"
                    android:gravity="center"
                    android:text="@string/title_goals" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewPoints"
                    style="@style/TextViewHeaderStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.094"
                    android:gravity="center"
                    android:text="@string/title_points" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewStanding"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="352:155"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
