<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:clickable="true"
    android:focusable="true"
    tools:context=".screen.teamdetail.TeamDetailFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewBack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="32:32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintWidth_percent="0.07" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewTeam"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/color_orange_white"
        app:cardCornerRadius="@dimen/dp_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="350:310"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.165"
        app:layout_constraintWidth_percent="0.85">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="101:101"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.078"
                app:layout_constraintWidth_percent="0.3" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewFavorite"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/ic_favorite_check"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="32:32"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.95"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.06"
                app:layout_constraintWidth_percent="0.08" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewNameTeam"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_compact_bold"
                android:gravity="center"
                android:textColor="@color/color_white"
                android:textSize="@dimen/sp_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="280:38"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
                app:layout_constraintVertical_bias="0.09"
                app:layout_constraintWidth_percent="0.2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewTitleCountry"
                style="@style/TextViewTitleStyle.White.Left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_country"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="68:19"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.105"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewNameTeam"
                app:layout_constraintVertical_bias="0.311"
                app:layout_constraintWidth_percent="0.4" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewTitleFounded"
                style="@style/TextViewTitleStyle.White.Left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_founded"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="73:19"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.107"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTitleCountry"
                app:layout_constraintVertical_bias="0.422"
                app:layout_constraintWidth_percent="0.2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewCountry"
                style="@style/TextViewTitleStyle.White.Right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="168:19"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.809"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewNameTeam"
                app:layout_constraintVertical_bias="0.303"
                app:layout_constraintWidth_percent="0.4" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewFounded"
                style="@style/TextViewTitleStyle.White.Right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="73:19"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.888"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewCountry"
                app:layout_constraintVertical_bias="0.43"
                app:layout_constraintWidth_percent="0.2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_compact_bold"
        android:text="@string/title_player"
        android:textColor="@color/color_orange_white"
        android:textSize="@dimen/sp_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="70:29"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewTeam"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintWidth_percent="0.2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewPlayers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="@dimen/dp_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="351:310"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2"
        app:layout_constraintVertical_bias="0.45"
        app:layout_constraintWidth_percent="0.85">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewRank"
                style="@style/TextViewHeaderStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_rank"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="7:14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.046"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.067" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewPlayer"
                style="@style/TextViewHeaderStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_player"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="32:14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.166"
                app:layout_constraintStart_toEndOf="@+id/textViewRank"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.067" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewAge"
                style="@style/TextViewHeaderStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_age"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="28:14"
                app:layout_constraintEnd_toStartOf="@+id/textViewGoals"
                app:layout_constraintHorizontal_bias="0.916"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.067" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewGoals"
                style="@style/TextViewHeaderStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_goals"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="29:14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.949"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.067" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewPlayers"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewRank" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
