<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.playerdetail.PlayerDetailFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/dp_350"
        android:layout_height="@dimen/dp_410"
        app:cardBackgroundColor="@color/color_orange_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageViewAvatar"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="104:104"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.111"
                app:layout_constraintWidth_percent="0.3"
                app:shapeAppearanceOverlay="@style/CircleImageView" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_35"
                android:fontFamily="@font/sf_compact_bold"
                android:gravity="center"
                android:textColor="@color/color_white"
                android:textSize="@dimen/sp_32"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewAvatar"
                app:layout_constraintVertical_bias="0.085" />

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="351:196"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewTitleAge"
                        style="@style/TextViewTitleStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/title_age"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="29:19"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.115"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.09" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewTitleWeight"
                        style="@style/TextViewTitleStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/title_weight"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="53:19"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.124"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewTitleHeight" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewTitleHeight"
                        style="@style/TextViewTitleStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/title_height"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="53:19"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.124"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewTitleNationality"
                        app:layout_constraintVertical_bias="0.27" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewTitleNationality"
                        style="@style/TextViewTitleStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/title_nationality"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="82:19"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.137"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewTitleAge"
                        app:layout_constraintVertical_bias="0.184" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewAge"
                        style="@style/TextViewTitleStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="29:19"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.915"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.09" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewWeight"
                        style="@style/TextViewTitleStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="53:19"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.909"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewHeight"
                        app:layout_constraintVertical_bias="0.509" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewHeight"
                        style="@style/TextViewTitleStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="53:19"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.909"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewNationality"
                        app:layout_constraintVertical_bias="0.27" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewNationality"
                        style="@style/TextViewTitleStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="82:19"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.899"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewAge"
                        app:layout_constraintVertical_bias="0.184" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
